<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PortsFragment"
    android:weightSum="3"
    android:orientation="horizontal">
    <Button
        android:id="@+id/btn_report"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_gravity="center_vertical"
        android:text="@string/txt_btn_report" />

    <Button
        android:id="@+id/btn_import"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_margin="15dp"
        android:layout_gravity="center_vertical"
        android:text="@string/txt_btn_import" />
    <Button
        android:id="@+id/btn_export"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_margin="15dp"
        android:layout_gravity="center_vertical"
        android:text="@string/txt_btn_export" />

</LinearLayout>