<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListFragment"
    android:weightSum="4"
    android:orientation="vertical">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:choiceMode="singleChoice" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_btn_add"/>
        <Button
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_btn_edit" />
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/txt_btn_delete" />
    </LinearLayout>

</LinearLayout>